add loading animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <router-outlet></router-outlet>
+
+<app-animated-bot id="main-loading"
+                  style="margin: 120px 0">
+</app-animated-bot>
