--- a/src/app/chat/message-input/message-input.component.html
+++ b/src/app/chat/message-input/message-input.component.html
@@ -1,7 +1,10 @@
 <div class="input-container">
-  <button mat-icon-button class="__bottom-location">
+  <a mat-icon-button
+     class="__bottom-location"
+     href="https://github.com/Mahakon/"
+     target="_blank">
     <mat-icon>favorite</mat-icon>
-  </button>
+  </a>
   <div class="message"
        contentEditable="true"
        [textContent]="content"
