last working version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <router-outlet></router-outlet>
 
-<app-animated-bot id="main-loading"
-                  style="margin: 120px 0">
+<app-animated-bot id="main-loading">
 </app-animated-bot>
